# CHAMP

./: .eslintrc.json  .gitignore  .prettierignore  AGENTS.md  CLAUDE.md  LICENSE  README.md  eslint.config.js  index.html  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json  vite.config.ts  vitest.config.ts
.github/: macos-signing-setup.md
.github/workflows/: build-macos-test.yml  build.yml  pull_request.yml  push.yml  release.yml
scripts/: sign-all-apps.sh  sign-macos.sh
src/: App.css  App.tsx  main.tsx
src-tauri/: CUSTOM_VERSIONS.md  Cargo.toml  MANUAL.html  entitlements.plist  runtime-config.json  runtime-config.schema.json  runtime-config.user.json.template  tauri.conf.json  tauri.macos.conf.json
src-tauri/capabilities/: default.json  runtime.json  service.json  settings.json  system.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  constants.rs  error.rs  lib.rs  tunnel.rs
src-tauri/src/config/: mod.rs  ports.rs  settings.rs
src-tauri/src/process/: manager.rs  mod.rs
src-tauri/src/runtime/: deps.rs  downloader.rs  locator.rs  mod.rs  packages.rs
src-tauri/tests/: ui_commands.rs
src/components/: Dashboard.test.tsx  Dashboard.tsx  ErrorBoundary.tsx  FirstRunWizard.tsx  HelpModal.tsx  LanguageSelector.tsx  PackageSelector.tsx  ServiceCard.test.tsx  ServiceCard.tsx  SettingsPanel.tsx  StatusBar.tsx  TemplateSelector.tsx
src/hooks/: index.ts  useAppConfig.ts  useNotifications.ts  useServices.ts
src/i18n/: translations.ts
src/stores/: configStore.ts  index.ts  languageStore.ts  notificationStore.ts  servicesStore.ts
src/test/: setup.ts
src/test/mocks/: serviceMocks.ts
src/test/utils/: testHelpers.tsx
src/types/: services.ts
src/utils/: audioManager.ts  clipboard.ts
tests/: README.md
