[package]
name = "champ"
version = "1.1.1"
description = "CHAMP - Caddy + HTTP(S) + Adminer + MySQL + PHP"
authors = ["Thirawat Sinlapasomsak"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "tauri_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5"
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "fs", "process", "sync", "time"] }
sha2 = "0.10"
hex = "0.4"
zip = { version = "2.2", default-features = false, features = ["deflate"] }
flate2 = "1.0"
tar = "0.4"
xz2 = "0.1"
image = { version = "0.25", default-features = false, features = ["png"] }
sysinfo = "0.33"

[dev-dependencies]
tempfile = "3"

# Optimize release builds for size and speed
[profile.release]
opt-level = 3        # Maximum optimization
lto = true           # Link-time optimization — reduces binary size significantly
codegen-units = 1    # Single codegen unit — slower compile but smaller/faster binary
strip = true         # Strip debug symbols from binary
# NOTE: panic = "abort" is intentionally omitted — Tauri and some dependencies
# rely on unwinding for safe error handling during startup (tray icon, window setup).
